// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortBox should render SortBox component with props is equal 'line'  1`] = `
<div
  className="format"
>
  <button
    className="box4wrap"
    data-id="sort-box-box4"
    onClick={[MockFunction]}
    type="button"
  >
    <div
      className="box4"
      key="0"
    />
    <div
      className="box4"
      key="1"
    />
    <div
      className="box4"
      key="2"
    />
    <div
      className="box4"
      key="3"
    />
  </button>
  <button
    className="box2wrap active"
    data-id="sort-box-box2"
    onClick={[MockFunction]}
    type="button"
  >
    <div
      className="box2"
      key="0"
    />
    <div
      className="box2"
      key="1"
    />
  </button>
</div>
`;

exports[`SortBox should render SortBox component with props is equal 'square'  1`] = `
<div
  className="format"
>
  <button
    className="box4wrap active"
    data-id="sort-box-box4"
    onClick={[MockFunction]}
    type="button"
  >
    <div
      className="box4"
      key="0"
    />
    <div
      className="box4"
      key="1"
    />
    <div
      className="box4"
      key="2"
    />
    <div
      className="box4"
      key="3"
    />
  </button>
  <button
    className="box2wrap"
    data-id="sort-box-box2"
    onClick={[MockFunction]}
    type="button"
  >
    <div
      className="box2"
      key="0"
    />
    <div
      className="box2"
      key="1"
    />
  </button>
</div>
`;

exports[`SortBox should render SortBox component without props 1`] = `
<div
  className="format"
>
  <button
    className="box4wrap active"
    data-id="sort-box-box4"
    onClick={[MockFunction]}
    type="button"
  >
    <div
      className="box4"
      key="0"
    />
    <div
      className="box4"
      key="1"
    />
    <div
      className="box4"
      key="2"
    />
    <div
      className="box4"
      key="3"
    />
  </button>
  <button
    className="box2wrap"
    data-id="sort-box-box2"
    onClick={[MockFunction]}
    type="button"
  >
    <div
      className="box2"
      key="0"
    />
    <div
      className="box2"
      key="1"
    />
  </button>
</div>
`;
